--- a/{{cookiecutter.project_slug}}/config/local.env
+++ b/{{cookiecutter.project_slug}}/config/local.env
@@ -2,7 +2,7 @@ SECRET_KEY="django-insecure-replace-me"
 DEBUG=1
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 
-DATABASE_ENGINE=django.db.backends.postgresql
+DATABASE_ENGINE=django.contrib.gis.db.backends.postgis
 POSTGRES_DB={{cookiecutter.project_slug}}
 POSTGRES_USER={{cookiecutter.project_slug}}
 POSTGRES_PASSWORD=password
