--- a/{{cookiecutter.project_slug}}/docker-compose.prod.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose.prod.yml
@@ -25,7 +25,7 @@ services:
       - db
 
   db:
-    image: postgres:12
+    image: postgis/postgis:16-3.4
     volumes:
       - postgres_data:/var/lib/postgresql/data
     env_file:
