--- a/{{cookiecutter.project_slug}}/docker-compose.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - grafana-otel-lgtm
 
   db:
-    image: postgres:12
+    image: postgis/postgis:16-3.4
     volumes:
       - postgres_data:/var/lib/postgresql/data
     env_file:
